# ChangeLog for gnome-extra/gnome-commander
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-commander/ChangeLog,v 1.5 2014/11/03 09:34:27 ago Exp $

*gnome-commander-1.4.4 (20 Jan 2015)

  20 Jan 2015; <maggu2810@gmail.com> +gnome-commander-1.4.4.ebuild:
  bump version

  03 Nov 2014; Agostino Sarubbo <ago@gentoo.org> gnome-commander-1.4.2.ebuild:
  Stable for x86, wrt bug #524672

  30 Oct 2014; Agostino Sarubbo <ago@gentoo.org> gnome-commander-1.4.2.ebuild:
  Stable for amd64, wrt bug #524672

*gnome-commander-1.4.2 (24 May 2014)

  24 May 2014; Markos Chandras <hwoarang@gentoo.org>
  +gnome-commander-1.4.2.ebuild:
  Version bump. Bug #511182

  05 May 2014; Markos Chandras <hwoarang@gentoo.org>
  gnome-commander-1.4.1.ebuild:
  Switch to python-single-r1 to avoid builds with python3. TThanks to Uwe Scholz
  <u.scholz83@gmx.de> on bug #509574

*gnome-commander-1.4.1 (03 May 2014)

  03 May 2014; Markos Chandras <hwoarang@gentoo.org>
  +gnome-commander-1.4.1.ebuild, +metadata.xml:
  Initial commit thanks to Uwe Scholz <u.scholz83@gmx.de> on bug #231885. He
  will also act as proxy-maintainer