@@ -1,8 +1,10 @@
 DIST gnome-commander-1.4.1.tar.xz 6263268 SHA256 ec57e81008a07bf4589bff8fe1ac519cb422016a8dc272d5ebf3d2441385d443 SHA512 13ea070d488220588965f2034a47451c6596418398d75ae8aa3cc43ab79a38466541bacb39c9de0230147da4cf9f339d9cd762516f03760957533f0ee9c18f70 WHIRLPOOL 074e62d83bc16890dc8522d8257c6d0fc9f4a8a4038e50c4e9874c7a2a348c3f5f66eaa7f72c4865bec5ad6967e1a261abc5916f7e22e05260d8d16d971ed9dd
 DIST gnome-commander-1.4.2.tar.xz 6285452 SHA256 8f47ac8428086406536c45b53cbf23b734322f2a557d91698cdeb2bd296f3029 SHA512 ad4b9b203f7f0040338f869fa4549a8d75494617d4117eab3449810467447c03c7e3d3f8ef09e755565f0f1266ead0981f8523619087284a891e61d0b6301d9b WHIRLPOOL a12f8cb94da1b8c5702e29c4f0f30df33181522c96ea68b1bf9d1c536238cff6ef968734b2c1a3df745d90b734c7e86e7cf13f6c306978a130b80920780a5960
 DIST gnome-commander-1.4.4.tar.xz 6291768 SHA256 0f0bad08d668014b558787bda21b90d7232708ab8b4bb4699409a0af03ab4d31 SHA512 19929b9945e0fc61ad36636c8a762af63964c5a21fb20f039a95115d11f7763271069736844ff7dcae0bc31c1ddd203aa2ed59d673daf702f03f8633e0aa4166 WHIRLPOOL 6d902ed69493dba45c4263689a1e3f072d550db5f88d08e38df223eb8aeaafc6efcc455169cdb939398e8254747fcb725e20b6bbba8a59af87c49317ddf3b8b5
+DIST gnome-commander-1.4.5.tar.xz 6314848 SHA256 01da8a02f3387b47d86a4cbff93c6f74c6e4fbeb94bc54a8a6e60084d6c0b17f SHA512 16858728dd30807f236c7605223d45f1b9486c9aca92295975b0ab6b421c64c1e18dffc3ab9f24349d526d81f1dfe7d3f703ad951c37c80c0ae6235915d894d4 WHIRLPOOL dd89e2715d463386fc70ebc9919a57b781a0e4834aa4b8835065f74430c120b48cc1b37be46942d0f467788ddfa546e758e0927b508b63a913e34d677ee3b7b9
 EBUILD gnome-commander-1.4.1.ebuild 1394 SHA256 908a9be0e30813cbac55a982d20ddd09c2a64027fcaca42c375ffd6b5ee9ccd1 SHA512 91892e2a4ec9eae98626701e3ddd413d09c1397140d97d4ffb84291df4680dd1df2a6a7386e2862459636614e8eadf5e313e4d40a9fb0829a62774cc76206e40 WHIRLPOOL 78b92f4fd778630630eb17a1f0b96a47807622c5a301b26c88ad449b65420aa019ca9ace3a5eda2c335754e898541ec40aedaca4caccf155236304e41b8110b1
 EBUILD gnome-commander-1.4.2.ebuild 1576 SHA256 3debb28b322a494eafbe8727e6b7f4b96377a37e1482a0090a3e593cbde3ee97 SHA512 34e128c7bbdb954a2cbb883b7c7157b462879bb0dfd429366c602aa3801fe3699c413ad3b9b053e38aa73674a5da62d612e0cd713325cfbcfb0be34c1f5dfc52 WHIRLPOOL 7036b5df0a761a298f5422897089ad0963d972c984d18651075ee890cb613bfafd033278f31dbaee87d4a84378f51a50462872b5895f074d994dff74347060e9
 EBUILD gnome-commander-1.4.4.ebuild 1572 SHA256 e0a192e5502bc7c1149915f73856b87338fd64181bcd9acf2749697682806d0a SHA512 f32eed0f16f3873efcc4ec72c531e6a642b0c082ace57e669c5cefe4f01afa8289b411337f0d03506e033e3ea480997bc8bbd0b4a84c425ba943dce555f11576 WHIRLPOOL 10b756ab294c7c668bf17e62c91c52685ce8fd76a7ba7619e8d9bd280ee240efddd7377a9ad3ba65ebd4bb14dffa4aeaab1d39603f4b9ce17e47e4e685205f23
-MISC ChangeLog 1185 SHA256 7274fd45a2c981bd13b21be00b9aa24a1f67cf2b0bedc74d267ee4c817323dbd SHA512 9c55e422b6f7b48c6ccddce845f5c6bc8e82b3f7b51875e814210381c406dfc9acccd587052590eb05a9fa699d8f49ed9a35b1e2d998f42548198bed6edac034 WHIRLPOOL 07f800182f777c61d80098c36779e495b9e8329146159cc4600a88d0e16b4652deaede173c7448fa26d6a3f162f069b5133111161957e38630308f3eeafd6ea9
+EBUILD gnome-commander-1.4.5.ebuild 1572 SHA256 e0a192e5502bc7c1149915f73856b87338fd64181bcd9acf2749697682806d0a SHA512 f32eed0f16f3873efcc4ec72c531e6a642b0c082ace57e669c5cefe4f01afa8289b411337f0d03506e033e3ea480997bc8bbd0b4a84c425ba943dce555f11576 WHIRLPOOL 10b756ab294c7c668bf17e62c91c52685ce8fd76a7ba7619e8d9bd280ee240efddd7377a9ad3ba65ebd4bb14dffa4aeaab1d39603f4b9ce17e47e4e685205f23
+MISC ChangeLog 1324 SHA256 6447a22c41bd51fdc129190a1150870af8aab89bc89441ca2bdd639f838c6a39 SHA512 774250e13beed7d1035dbbc421ad78d40604ece775d239b72dad074c2879df782442c5fe597f63be53a267801ef9f7017b5e3aa3fd8d549907b3bfff4c2d49c0 WHIRLPOOL 1e5759d11658e05325951c4b04c9d9f8f013fdc809bd08ee870d6931968b4c4b4cbd5c8fe04385ba1828ea669e0f6e6987c25569ce9de0c51ac36ac7cbdd0adf
 MISC metadata.xml 1070 SHA256 64bd49128846e2e268d4980c405eb2f4669cfa39d7a10fe454d2a96a3f76d3db SHA512 5724cce62fc296dae59f106e18050dbab0631aa5624b473ca42b28af8bad275341cd4f04f965a81ea741fa1fafde47cafb7c520f6390a9a8f7a03e136e4ce775 WHIRLPOOL d32bca2342ae0945b813aaef94a7188fca2d2d5a4ea2e332447c614cfccdd47dcc5549737ab770b8d8828731e080c61ce59c306aff9aeb231f6c4afe578b9e10
